# httpsig-example

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  setup.cfg
.github/workflows/: build-and-deploy.yaml
backend/: .env.example  pyproject.toml
backend/app/: http_sig.py  keys.py  main.py  prod.py  settings.py  well_known.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: index.css  main.jsx  settings.js  utils.js
frontend/src/components/: Box.jsx  DataProductLink.jsx  LoginForm.jsx  WeatherData.jsx
frontend/src/containers/: App.jsx  CurrentWeather.jsx  HTTPSig.jsx  PersonDetails.jsx
productizer/: .env.example  pyproject.toml
productizer/app/: http_sig.py  main.py  settings.py
