[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "Example dataspace application backend"
authors = ["IOXIO"]
packages = [{include = "app", from = "."}]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = {version = "^0.20.0", extras = ["standard"]}
Authlib = "^1.2.0"
itsdangerous = "^2.1.2"
httpx = "^0.23.3"
pyjwt = "^2.6.0"
pyjwt-key-fetcher = "^0.2.0"
requests = "^2.28.2"
http-message-signatures = "^0.4.4"

[tool.poetry.scripts]
dev = "app.main:main"
serve = "app.prod:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
